# todolist_django

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: manage.py
src/bot/: models.py  serializers.py  views.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/bot/tg/: client.py  models.py
src/bot/tg/fsm/: base.py  memory_storage.py
src/config/: urls.py
src/config/settings/: base.py  dev.py  production.py
src/core/: admin.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  filters.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
