[tool.poetry]
name = "todolist-django"
version = "0.1.0"
description = ""
authors = ["q1nfo <q1nffos@gmail.com>"]
readme = "README.md"
packages = [{include = "todolist_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
